# vmware-vi

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
docs/: AbdicateDomOwnershipRequestType.md  AbortCustomizationRequestType.md  AboutInfo.md  AccountCreatedEvent.md  AccountRemovedEvent.md  AccountUpdatedEvent.md  AcknowledgeAlarmRequestType.md  AcquireCredentialsInGuestRequestType.md  AcquireGenericServiceTicketRequestType.md  AcquireLocalTicketRequestType.md  AcquireTicketRequestType.md  Action.md  ActionParameterEnum.md  ActionTypeEnum.md  ActiveDirectoryFault.md  ActiveDirectoryProfile.md  ActiveVMsBlockingEVC.md  AddAuthorizationRoleRequestType.md  AddCustomFieldDefRequestType.md  AddDVPortgroupRequestType.md  AddDisksRequestType.md  AddFilterEntitiesRequestType.md  AddFilterRequestType.md  AddGuestAliasRequestType.md  AddHostRequestType.md  AddInternetScsiSendTargetsRequestType.md  AddInternetScsiStaticTargetsRequestType.md  AddKeyRequestType.md  AddKeysRequestType.md  AddLicenseRequestType.md  AddMonitoredEntitiesRequestType.md  AddNetworkResourcePoolRequestType.md  AddPortGroupRequestType.md  AddServiceConsoleVirtualNicRequestType.md  AddStandaloneHostRequestType.md  AddVirtualNicRequestType.md  AddVirtualSwitchRequestType.md  AdminDisabled.md  AdminNotDisabled.md  AdminPasswordNotChangedEvent.md  (+7254 more)
vmware_vi/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
vmware_vi/api/: __init__.py  alarm_api.py  alarm_manager_api.py  authorization_manager_api.py  certificate_manager_api.py  cluster_compute_resource_api.py  (+130 more)
(+7160 files in other folders)
